# keynot

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  FORMAT.md  README.md  USAGE.md  justfile  rustfmt.toml
.github/workflows/: ci.yml
assets/: dark-plus.tmTheme  keynot.cast
examples/: tour.keynot
src/: lib.rs  main.rs  template.rs  theme.rs
src/app/: config.rs  images.rs  mod.rs
src/markdown/: metadata.rs  mod.rs  slide.rs  splitter.rs
src/render/: highlight.rs  mod.rs  slide.rs  wrap.rs
tests/: cli.rs  pty.rs
xtask/: Cargo.toml
xtask/src/: main.rs
