[package]
name = "keynot"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "Terminal slide presentations from a single markdown file"
repository = "https://github.com/devjgm/keynot"
license = "MIT"
keywords = ["presentation", "slides", "markdown", "terminal", "tui"]
categories = ["command-line-utilities", "visualization"]
# Repo-only files; keeps the published package lean.
exclude = [".github/", ".gitattributes", "rustfmt.toml"]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
# Must stay in lockstep with the crossterm version ratatui's `crossterm`
# feature uses, or two incompatible crossterm versions end up in the build.
crossterm = "0.29.0"
eyre = "0.6.12"
fs-err = "3.3.1"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = "0.30.2"
ratatui-image = { version = "11.0.6", default-features = false, features = ["crossterm"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_norway = "0.9"
# default-fancy avoids onig_sys (a C build) in favor of pure-Rust regexes,
# which keeps cross-compilation (notably Windows) toolchain-free.
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
tachyonfx = "0.25.1"
thiserror = "2.0.18"
unicode-width = "0.2.2"
ureq = "3.3.0"

[dev-dependencies]
snapbox = { version = "1.2.2", features = ["cmd"] }
tempfile = "3.27.0"

[profile.release]
lto = true
strip = true
