[package]
name = "xtask"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fs-err = "3.3.1"
image = { version = "0.25.10", default-features = false, features = ["png", "gif"] }
portable-pty = "0.9.0"
serde_json = "1.0"
ureq = "3.3.0"
